--- a/dashboard/templates/dashboard_ordens.html
+++ b/dashboard/templates/dashboard_ordens.html
@@ -13,6 +13,8 @@ Dashboard
     <option value="week">Esta semana</option>
     <option value="month">Este mes</option>
     <option value="year">Este año</option>
+    <option value="7days">Últimos 7 días</option>
+    <option value="30days">Últimos 30 días</option>
   </select>
   <button id="btn-filtrar">Aplicar filtro</button>
   <button id="btn-borrar-filtro">Borrar filtro</button>
@@ -28,7 +30,7 @@ Dashboard
     <option value="7days">Últimos 7 días</option>
     <option value="30days">Últimos 30 días</option>
     <option value="year">Este año</option>
-    <option value="comparativa_mes">Comparar con mes anterior</option> <!-- nuevo -->
+    <option value="comparativa_mes">Comparar con mes anterior</option>
     <option value="comparativa_anio">Comparar con año anterior</option>
   </select>
   <button id="btn-filtrar-chart2">Aplicar filtro gráfico 2</button>
@@ -44,6 +46,8 @@ Dashboard
     <option value="7days">Últimos 7 días</option>
     <option value="30days">Últimos 30 días</option>
     <option value="year">Este año</option>
+    <option value="comparativa_mes">Comparar con mes anterior</option>
+    <option value="comparativa_anio">Comparar con año anterior</option>
   </select>
   <button id="btn-filtrar-chart3">Aplicar filtro gráfico 2</button>
   <button id="btn-borrar-filtro-chart3">Borrar filtro gráfico 2</button>
@@ -59,9 +63,19 @@ Dashboard
     <option value="30days">Últimos 30 días</option>
     <option value="year">Este año</option>
   </select>
-  <button id="btn-filtrar-chart4">Aplicar filtro gráfico 2</button>
-  <button id="btn-borrar-filtro-chart4">Borrar filtro gráfico 2</button>
+
+  <label for="top_filter_chart4">Filtro Top:</label>
+  <select id="top_filter_chart4">
+    <option value="all" selected>Todos los productos</option>
+    <option value="top5">Top 5 más vendidos</option>
+    <option value="top10">Top 10 más vendidos</option>
+    <option value="less5">Menos 5 vendidos</option>
+  </select>
+
+  <button id="btn-filtrar-chart4">Aplicar filtro gráfico 3</button>
+  <button id="btn-borrar-filtro-chart4">Borrar filtro gráfico 3</button>
 </div>
+
 <div id="chart4" style="width: 600px; height: 400px;"></div>
 
 
