--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,11 @@
 {% load custom_filter %}
 {% block banner %}
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
-<section class="text-center px-4 py-3 banner-container" style="background:  #2C2F47;">
-    <div class="banner">
-        <h2>Los mejores productos <br>
-            <b>a un click</b>
-        </h2>
-        <h5>Descubra lo mejor en tecnologia e instrumentos
-            <br>musicales en Byte & Beat
-        </h5>
+<section class="hero" id="inicio">
+    <div class="hero-content animate-fade-in">
+        <h1 class="hero-title">Los mejores productos<br>a un click</h1>
+        <p class="hero-subtitle">Descubre lo mejor en tecnología e instrumentos musicales en Byte & Beat</p>
+        <button class="cta-button floating" >Explorar Productos</button>
     </div>
 </section>
 {% endblock %}
@@ -21,38 +18,10 @@
 <section id="categories" class="container our-categories-container">
 
     <div class="text-center" style="color: #17F0D2;">
-        <h3>Nuestras Categorias</h3>
+        <h3>Productos Destacados</h3>
     </div>
 
     <div class="container-our-categories">
-        <div class="col-4-md col-12">
-            <div class="row">
-                {% for categorys in categoria %}
-                    <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; ">
-                        <!-- <div class="bg-light d-flex align-items-center justify-content-center" style="height: 130px; border-radius: 10px;">
-                            <span class="text-muted fs-4">400 × 320</span>
-                        </div> -->
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold">{{categorys.name}}</h5>
-                            <p class="card-text">
-                                Descripcion de los productos en esta categoria
-                            </p>
-                            <a href="{% url 'categorias_marcas_filtro' 'categoria' categorys.id|urlsafe_base64_encode_filter %}" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
-        
-    </div>
-</section>
-
-<section class="containter featured-products bg-secondary" style="padding-top: 1%;">
-    <div class="text-center" style="color: #17F0D2;">
-        <h3 class="title-featured">Productos Destacados</h3>
-    </div>
-
-    <div class="container-featured-products">
         <div class="col-4-md col-12">
             <div class="row">
                 {% for product_vent in mas_vendido %}
@@ -74,10 +43,35 @@
                     </div>
                 </div>  
                 {% endfor %}             
+                
+            </div>
+        </div>
+        
+    </div>
+</section>
+
+<section class="containter featured-products bg-secondary" style="padding-top: 1%;">
+    <div class="text-center" style="color: #17F0D2;">
+        <h3 class="title-featured">Nuestras Categorias</h3>
+    </div>
+
+    <div class="container-featured-products">
+        <div class="col-4-md col-12">
+            <div class="row">
+                {% for categorys in categoria %}
+                    <div class="card card-hover shadow-sm border-0 rounded-4 mx-auto" style="max-width: 300px; ">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">{{categorys.name}}</h5>
+                            <p class="card-text">
+                                Descripcion de los productos en esta categoria
+                            </p>
+                            <a href="{% url 'categorias_marcas_filtro' 'categoria' categorys.id|urlsafe_base64_encode_filter %}" class="btn rounded-pill px-4" style="background: #17F0D2;">Ver</a>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
 </section>
-
 
 {% endblock %}
